--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #f8fafcea;
 
 // Typography
 $font-family-sans-serif: 'Fredoka One', cursive;
@@ -9,7 +9,7 @@ $line-height-base: 1.6;
 
 // Colors
 $blue: #8d0d0d;
-$indigo: #6574cd;
+$indigo: hsl(231, 51%, 60%);
 $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
