--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,8 +7,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #d62405;
-  --bs-indigo: #cd7a65;
+  --bs-blue: #8d0d0d;
+  --bs-indigo: #6575cd;
   --bs-purple: #9561e2;
   --bs-pink: #f66d9b;
   --bs-red: #e3342f;
@@ -29,7 +29,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #d62405;
+  --bs-primary: #8d0d0d;
   --bs-secondary: #6c757d;
   --bs-success: #38c172;
   --bs-info: #6cb2eb;
@@ -37,7 +37,7 @@
   --bs-danger: #e3342f;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 214, 36, 5;
+  --bs-primary-rgb: 141, 13, 13;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 56, 193, 114;
   --bs-info-rgb: 108, 178, 235;
@@ -57,7 +57,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.6;
   --bs-body-color: #212529;
-  --bs-body-bg: #f8fafc;
+  --bs-body-bg: #f8fafcea;
 }
 
 *,
@@ -231,11 +231,11 @@ sup {
 }
 
 a {
-  color: #d62405;
+  color: #8d0d0d;
   text-decoration: underline;
 }
 a:hover {
-  color: #ab1d04;
+  color: #710a0a;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -601,7 +601,7 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -2021,15 +2021,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #f7d3cd;
-  --bs-table-striped-bg: #ebc8c3;
+  --bs-table-bg: #e8cfcf;
+  --bs-table-striped-bg: #dcc5c5;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #debeb9;
+  --bs-table-active-bg: #d1baba;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e4c3be;
+  --bs-table-hover-bg: #d7bfbf;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #debeb9;
+  border-color: #d1baba;
 }
 
 .table-secondary {
@@ -2189,7 +2189,7 @@ progress {
   font-weight: 400;
   line-height: 1.6;
   color: #212529;
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
@@ -2211,10 +2211,10 @@ progress {
 }
 .form-control:focus {
   color: #212529;
-  background-color: #f8fafc;
-  border-color: #eb9282;
+  background-color: #f8fafcea;
+  border-color: #c68686;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.6em;
@@ -2409,7 +2409,7 @@ textarea.form-control-lg {
   font-weight: 400;
   line-height: 1.6;
   color: #212529;
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -2427,9 +2427,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #eb9282;
+  border-color: #c68686;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2475,7 +2475,7 @@ textarea.form-control-lg {
   height: 1em;
   margin-top: 0.3em;
   vertical-align: top;
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -2496,13 +2496,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #eb9282;
+  border-color: #c68686;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .form-check-input:checked {
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2511,8 +2511,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2541,7 +2541,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23eb9282'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23c68686'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2577,10 +2577,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2589,7 +2589,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #d62405;
+  background-color: #8d0d0d;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2604,7 +2604,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #f3bdb4;
+  background-color: #ddb6b6;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2618,7 +2618,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #d62405;
+  background-color: #8d0d0d;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2633,7 +2633,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #f3bdb4;
+  background-color: #ddb6b6;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -3017,7 +3017,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -3026,32 +3026,32 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #b61f04;
-  border-color: #ab1d04;
+  background-color: #780b0b;
+  border-color: #710a0a;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #b61f04;
-  border-color: #ab1d04;
-  box-shadow: 0 0 0 0.25rem rgba(220, 69, 43, 0.5);
+  background-color: #780b0b;
+  border-color: #710a0a;
+  box-shadow: 0 0 0 0.25rem rgba(158, 49, 49, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ab1d04;
-  border-color: #a11b04;
+  background-color: #710a0a;
+  border-color: #6a0a0a;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(220, 69, 43, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(158, 49, 49, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 
 .btn-secondary {
@@ -3265,27 +3265,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #d62405;
-  border-color: #d62405;
+  color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #d62405;
+  color: #8d0d0d;
   background-color: transparent;
 }
 
@@ -3466,11 +3466,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #d62405;
+  color: #8d0d0d;
   text-decoration: underline;
 }
 .btn-link:hover {
-  color: #ab1d04;
+  color: #710a0a;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3775,7 +3775,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #d62405;
+  background-color: #8d0d0d;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3816,7 +3816,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #d62405;
+  background-color: #8d0d0d;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3938,7 +3938,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #d62405;
+  color: #8d0d0d;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3948,7 +3948,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #ab1d04;
+  color: #710a0a;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -3978,8 +3978,8 @@ textarea.form-control-lg {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: #f8fafcea;
+  border-color: #dee2e6 #dee2e6 #f8fafcea;
 }
 .nav-tabs .dropdown-menu {
   margin-top: -1px;
@@ -3995,7 +3995,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #d62405;
+  background-color: #8d0d0d;
 }
 
 .nav-fill > .nav-link,
@@ -4673,7 +4673,7 @@ textarea.form-control-lg {
   font-size: 0.9rem;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -4685,12 +4685,12 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: #c12005;
-  background-color: #fbe9e6;
+  color: #7f0c0c;
+  background-color: #f4e7e7;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23c12005'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237f0c0c'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
@@ -4714,9 +4714,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #eb9282;
+  border-color: #c68686;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 
 .accordion-header {
@@ -4724,7 +4724,7 @@ textarea.form-control-lg {
 }
 
 .accordion-item {
-  background-color: #f8fafc;
+  background-color: #f8fafcea;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .accordion-item:first-of-type {
@@ -4803,7 +4803,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #d62405;
+  color: #8d0d0d;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4816,16 +4816,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #ab1d04;
+  color: #710a0a;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #ab1d04;
+  color: #710a0a;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4834,8 +4834,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4932,12 +4932,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: #801603;
-  background-color: #f7d3cd;
-  border-color: #f3bdb4;
+  color: #550808;
+  background-color: #e8cfcf;
+  border-color: #ddb6b6;
 }
 .alert-primary .alert-link {
-  color: #661202;
+  color: #440606;
 }
 
 .alert-secondary {
@@ -5031,7 +5031,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #d62405;
+  background-color: #8d0d0d;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5114,8 +5114,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #d62405;
-  border-color: #d62405;
+  background-color: #8d0d0d;
+  border-color: #8d0d0d;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5279,17 +5279,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #801603;
-  background-color: #f7d3cd;
+  color: #550808;
+  background-color: #e8cfcf;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #801603;
-  background-color: #debeb9;
+  color: #550808;
+  background-color: #d1baba;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #801603;
-  border-color: #801603;
+  background-color: #550808;
+  border-color: #550808;
 }
 
 .list-group-item-secondary {
@@ -5408,7 +5408,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(214, 36, 5, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6433,10 +6433,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #d62405;
+  color: #8d0d0d;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #ab1d04;
+  color: #710a0a;
 }
 
 .link-secondary {
@@ -6886,7 +6886,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #d62405 !important;
+  border-color: #8d0d0d !important;
 }
 
 .border-secondary {
@@ -11285,23 +11285,4 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
-}
-body {
-  font-family: "Didact Gothic", sans-serif;
-}
-
-.bg-primary .navbar-brand {
-  color: #e43b3b;
-  font-family: "Fredoka One", cursive;
-  font-size: 1.5rem;
-}
-.bg-primary .navbar-brand:hover {
-  color: white;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: white;
-}
-.navbar-light .navbar-nav .nav-link:hover {
-  color: white;
 }
