--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #8d0d0d;
+  --bs-blue: #a00f0f;
   --bs-indigo: #6575cd;
   --bs-purple: #9561e2;
   --bs-pink: #f66d9b;
@@ -16,7 +16,7 @@
   --bs-yellow: #ffed4a;
   --bs-green: #38c172;
   --bs-teal: #4dc0b5;
-  --bs-cyan: #6cb2eb;
+  --bs-cyan: #e6ebf0;
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
@@ -29,18 +29,18 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #8d0d0d;
+  --bs-primary: #a00f0f;
   --bs-secondary: #6c757d;
   --bs-success: #38c172;
-  --bs-info: #6cb2eb;
+  --bs-info: #e6ebf0;
   --bs-warning: #ffed4a;
   --bs-danger: #e3342f;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 141, 13, 13;
+  --bs-primary-rgb: 160, 15, 15;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 56, 193, 114;
-  --bs-info-rgb: 108, 178, 235;
+  --bs-info-rgb: 230, 235, 240;
   --bs-warning-rgb: 255, 237, 74;
   --bs-danger-rgb: 227, 52, 47;
   --bs-light-rgb: 248, 249, 250;
@@ -231,11 +231,11 @@ sup {
 }
 
 a {
-  color: #8d0d0d;
+  color: #a00f0f;
   text-decoration: underline;
 }
 a:hover {
-  color: #710a0a;
+  color: #800c0c;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2021,15 +2021,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #e8cfcf;
-  --bs-table-striped-bg: #dcc5c5;
+  --bs-table-bg: #eccfcf;
+  --bs-table-striped-bg: #e0c5c5;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d1baba;
+  --bs-table-active-bg: #d4baba;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d7bfbf;
+  --bs-table-hover-bg: #dabfbf;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #d1baba;
+  border-color: #d4baba;
 }
 
 .table-secondary {
@@ -2057,15 +2057,15 @@ progress {
 }
 
 .table-info {
-  --bs-table-bg: #e2f0fb;
-  --bs-table-striped-bg: #d7e4ee;
+  --bs-table-bg: #fafbfc;
+  --bs-table-striped-bg: #eeeeef;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbd8e2;
+  --bs-table-active-bg: #e1e2e3;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1dee8;
+  --bs-table-hover-bg: #e7e8e9;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #cbd8e2;
+  border-color: #e1e2e3;
 }
 
 .table-warning {
@@ -2212,9 +2212,9 @@ progress {
 .form-control:focus {
   color: #212529;
   background-color: #f8fafcea;
-  border-color: #c68686;
+  border-color: #d08787;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.6em;
@@ -2427,9 +2427,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #c68686;
+  border-color: #d08787;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2496,13 +2496,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #c68686;
+  border-color: #d08787;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .form-check-input:checked {
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2511,8 +2511,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2541,7 +2541,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23c68686'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23d08787'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2577,10 +2577,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 1px #f8fafcea, 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2589,7 +2589,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2604,7 +2604,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #ddb6b6;
+  background-color: #e3b7b7;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2618,7 +2618,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2633,7 +2633,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #ddb6b6;
+  background-color: #e3b7b7;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -3017,7 +3017,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -3026,32 +3026,32 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #780b0b;
-  border-color: #710a0a;
+  background-color: #880d0d;
+  border-color: #800c0c;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #780b0b;
-  border-color: #710a0a;
-  box-shadow: 0 0 0 0.25rem rgba(158, 49, 49, 0.5);
+  background-color: #880d0d;
+  border-color: #800c0c;
+  box-shadow: 0 0 0 0.25rem rgba(174, 51, 51, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #710a0a;
-  border-color: #6a0a0a;
+  background-color: #800c0c;
+  border-color: #780b0b;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(158, 49, 49, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(174, 51, 51, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 
 .btn-secondary {
@@ -3116,32 +3116,32 @@ textarea.form-control-lg {
 
 .btn-info {
   color: #000;
-  background-color: #6cb2eb;
-  border-color: #6cb2eb;
+  background-color: #e6ebf0;
+  border-color: #e6ebf0;
 }
 .btn-info:hover {
   color: #000;
-  background-color: #82beee;
-  border-color: #7bbaed;
+  background-color: #eaeef2;
+  border-color: #e9edf2;
 }
 .btn-check:focus + .btn-info, .btn-info:focus {
   color: #000;
-  background-color: #82beee;
-  border-color: #7bbaed;
-  box-shadow: 0 0 0 0.25rem rgba(92, 151, 200, 0.5);
+  background-color: #eaeef2;
+  border-color: #e9edf2;
+  box-shadow: 0 0 0 0.25rem rgba(196, 200, 204, 0.5);
 }
 .btn-check:checked + .btn-info, .btn-check:active + .btn-info, .btn-info:active, .btn-info.active, .show > .btn-info.dropdown-toggle {
   color: #000;
-  background-color: #89c1ef;
-  border-color: #7bbaed;
+  background-color: #ebeff3;
+  border-color: #e9edf2;
 }
 .btn-check:checked + .btn-info:focus, .btn-check:active + .btn-info:focus, .btn-info:active:focus, .btn-info.active:focus, .show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(92, 151, 200, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(196, 200, 204, 0.5);
 }
 .btn-info:disabled, .btn-info.disabled {
   color: #000;
-  background-color: #6cb2eb;
-  border-color: #6cb2eb;
+  background-color: #e6ebf0;
+  border-color: #e6ebf0;
 }
 
 .btn-warning {
@@ -3265,27 +3265,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #8d0d0d;
-  border-color: #8d0d0d;
+  color: #a00f0f;
+  border-color: #a00f0f;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #8d0d0d;
+  color: #a00f0f;
   background-color: transparent;
 }
 
@@ -3340,27 +3340,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-info {
-  color: #6cb2eb;
-  border-color: #6cb2eb;
+  color: #e6ebf0;
+  border-color: #e6ebf0;
 }
 .btn-outline-info:hover {
   color: #000;
-  background-color: #6cb2eb;
-  border-color: #6cb2eb;
+  background-color: #e6ebf0;
+  border-color: #e6ebf0;
 }
 .btn-check:focus + .btn-outline-info, .btn-outline-info:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 178, 235, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(230, 235, 240, 0.5);
 }
 .btn-check:checked + .btn-outline-info, .btn-check:active + .btn-outline-info, .btn-outline-info:active, .btn-outline-info.active, .btn-outline-info.dropdown-toggle.show {
   color: #000;
-  background-color: #6cb2eb;
-  border-color: #6cb2eb;
+  background-color: #e6ebf0;
+  border-color: #e6ebf0;
 }
 .btn-check:checked + .btn-outline-info:focus, .btn-check:active + .btn-outline-info:focus, .btn-outline-info:active:focus, .btn-outline-info.active:focus, .btn-outline-info.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 178, 235, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(230, 235, 240, 0.5);
 }
 .btn-outline-info:disabled, .btn-outline-info.disabled {
-  color: #6cb2eb;
+  color: #e6ebf0;
   background-color: transparent;
 }
 
@@ -3466,11 +3466,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #8d0d0d;
+  color: #a00f0f;
   text-decoration: underline;
 }
 .btn-link:hover {
-  color: #710a0a;
+  color: #800c0c;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3775,7 +3775,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3816,7 +3816,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3938,7 +3938,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #8d0d0d;
+  color: #a00f0f;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3948,7 +3948,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #710a0a;
+  color: #800c0c;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -3995,7 +3995,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
 }
 
 .nav-fill > .nav-link,
@@ -4685,12 +4685,12 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: #7f0c0c;
-  background-color: #f4e7e7;
+  color: #900e0e;
+  background-color: #f6e7e7;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237f0c0c'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23900e0e'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
@@ -4714,9 +4714,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #c68686;
+  border-color: #d08787;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 
 .accordion-header {
@@ -4803,7 +4803,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #8d0d0d;
+  color: #a00f0f;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4816,16 +4816,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #710a0a;
+  color: #800c0c;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #710a0a;
+  color: #800c0c;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4834,8 +4834,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4932,12 +4932,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: #550808;
-  background-color: #e8cfcf;
-  border-color: #ddb6b6;
+  color: #600909;
+  background-color: #eccfcf;
+  border-color: #e3b7b7;
 }
 .alert-primary .alert-link {
-  color: #440606;
+  color: #4d0707;
 }
 
 .alert-secondary {
@@ -4959,12 +4959,12 @@ textarea.form-control-lg {
 }
 
 .alert-info {
-  color: #416b8d;
-  background-color: #e2f0fb;
-  border-color: #d3e8f9;
+  color: #5c5e60;
+  background-color: #fafbfc;
+  border-color: #f8f9fb;
 }
 .alert-info .alert-link {
-  color: #345671;
+  color: #4a4b4d;
 }
 
 .alert-warning {
@@ -5031,7 +5031,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #8d0d0d;
+  background-color: #a00f0f;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5114,8 +5114,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #8d0d0d;
-  border-color: #8d0d0d;
+  background-color: #a00f0f;
+  border-color: #a00f0f;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5279,17 +5279,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #550808;
-  background-color: #e8cfcf;
+  color: #600909;
+  background-color: #eccfcf;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #550808;
-  background-color: #d1baba;
+  color: #600909;
+  background-color: #d4baba;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #550808;
-  border-color: #550808;
+  background-color: #600909;
+  border-color: #600909;
 }
 
 .list-group-item-secondary {
@@ -5321,17 +5321,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-info {
-  color: #416b8d;
-  background-color: #e2f0fb;
+  color: #5c5e60;
+  background-color: #fafbfc;
 }
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
-  color: #416b8d;
-  background-color: #cbd8e2;
+  color: #5c5e60;
+  background-color: #e1e2e3;
 }
 .list-group-item-info.list-group-item-action.active {
   color: #fff;
-  background-color: #416b8d;
-  border-color: #416b8d;
+  background-color: #5c5e60;
+  border-color: #5c5e60;
 }
 
 .list-group-item-warning {
@@ -5408,7 +5408,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(141, 13, 13, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(160, 15, 15, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6433,10 +6433,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #8d0d0d;
+  color: #a00f0f;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #710a0a;
+  color: #800c0c;
 }
 
 .link-secondary {
@@ -6454,10 +6454,10 @@ textarea.form-control-lg {
 }
 
 .link-info {
-  color: #6cb2eb;
+  color: #e6ebf0;
 }
 .link-info:hover, .link-info:focus {
-  color: #89c1ef;
+  color: #ebeff3;
 }
 
 .link-warning {
@@ -6886,7 +6886,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #8d0d0d !important;
+  border-color: #a00f0f !important;
 }
 
 .border-secondary {
@@ -6898,7 +6898,7 @@ textarea.form-control-lg {
 }
 
 .border-info {
-  border-color: #6cb2eb !important;
+  border-color: #e6ebf0 !important;
 }
 
 .border-warning {
