--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #8d0d0d;
+$blue: #a00f0f;
 $indigo: hsl(231, 51%, 60%);
 $purple: #9561e2;
 $pink: #f66d9b;
@@ -17,4 +17,4 @@ $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
-$cyan: #6cb2eb;
+$cyan: #e6ebf0;
